--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 5 failed tests</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-HybridFrameWorkV1">
-              <span class="suite-name border-failed">HybridFrameWorkV1</span>
+              <span class="suite-name border-passed">HybridFrameWorkV1</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,41 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods, 5 failed,   2 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-HybridFrameWorkV1" class="hide-methods failed suite-HybridFrameWorkV1"> (hide)</a> <!-- hide-methods failed suite-HybridFrameWorkV1 -->
-                      <a href="#" panel-name="suite-HybridFrameWorkV1" class="show-methods failed suite-HybridFrameWorkV1"> (show)</a> <!-- show-methods failed suite-HybridFrameWorkV1 -->
-                    </span>
-                    <div class="method-list-content failed suite-HybridFrameWorkV1">
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-HybridFrameWorkV1" title="com.hybframe.testCases.TC_LoginDDT_002" hash-for-method="loginDDT(mngr184520, dfghJikl)">loginDDT(mngr184520, dfghJikl)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-HybridFrameWorkV1" title="com.hybframe.testCases.TC_LoginDDT_002" hash-for-method="loginDDT(mngr178963, fdgsfdFF)">loginDDT(mngr178963, fdgsfdFF)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-HybridFrameWorkV1" title="com.hybframe.testCases.TC_LoginDDT_002" hash-for-method="loginDDT(mngr181790, uqAhAmu)">loginDDT(mngr181790, uqAhAmu)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-HybridFrameWorkV1" title="com.hybframe.testCases.TC_LoginDDT_002" hash-for-method="loginDDT(mngr125896, ghTyUiok)">loginDDT(mngr125896, ghTyUiok)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-HybridFrameWorkV1" title="com.hybframe.testCases.TC_LoginDDT_002" hash-for-method="loginDDT(mngr145698, vbhgTUkl)">loginDDT(mngr145698, vbhgTUkl)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-HybridFrameWorkV1 -->
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -156,74 +122,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-HybridFrameWorkV1" class="panel HybridFrameWorkV1">
-          <div class="suite-HybridFrameWorkV1-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.hybframe.testCases.TC_LoginDDT_002</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginDDT(mngr184520, dfghJikl)">
-                  </a> <!-- loginDDT(mngr184520, dfghJikl) -->
-                  <span class="method-name">loginDDT</span>
-                  <span class="parameters">(mngr184520, dfghJikl)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at com.hybframe.testCases.TC_LoginDDT_002.loginDDT(TC_LoginDDT_002.java:34)
-... Removed 29 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginDDT(mngr178963, fdgsfdFF)">
-                  </a> <!-- loginDDT(mngr178963, fdgsfdFF) -->
-                  <span class="method-name">loginDDT</span>
-                  <span class="parameters">(mngr178963, fdgsfdFF)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at com.hybframe.testCases.TC_LoginDDT_002.loginDDT(TC_LoginDDT_002.java:34)
-... Removed 29 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginDDT(mngr181790, uqAhAmu)">
-                  </a> <!-- loginDDT(mngr181790, uqAhAmu) -->
-                  <span class="method-name">loginDDT</span>
-                  <span class="parameters">(mngr181790, uqAhAmu)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at com.hybframe.testCases.TC_LoginDDT_002.loginDDT(TC_LoginDDT_002.java:34)
-... Removed 29 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginDDT(mngr125896, ghTyUiok)">
-                  </a> <!-- loginDDT(mngr125896, ghTyUiok) -->
-                  <span class="method-name">loginDDT</span>
-                  <span class="parameters">(mngr125896, ghTyUiok)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at com.hybframe.testCases.TC_LoginDDT_002.loginDDT(TC_LoginDDT_002.java:34)
-... Removed 29 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="loginDDT(mngr145698, vbhgTUkl)">
-                  </a> <!-- loginDDT(mngr145698, vbhgTUkl) -->
-                  <span class="method-name">loginDDT</span>
-                  <span class="parameters">(mngr145698, vbhgTUkl)</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
-	at com.hybframe.testCases.TC_LoginDDT_002.loginDDT(TC_LoginDDT_002.java:34)
-... Removed 29 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-HybridFrameWorkV1-class-failed -->
           <div class="suite-HybridFrameWorkV1-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -271,7 +169,6 @@
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.hybframe.testCases.TC_LoginTest&quot;/&gt;
-      &lt;class name=&quot;com.hybframe.testCases.TC_LoginDDT_002&quot;/&gt;
       &lt;class name=&quot;com.hybframe.testCases.TC_AddCustomerTest_003&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- HybridFrame Test --&gt;
@@ -286,7 +183,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">HybridFrame Test (3 classes)</span>
+                <span class="test-name">HybridFrame Test (2 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -312,40 +209,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(7);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'addNewCustomer')
 data.setCell(0, 2, 'com.hybframe.testCases.TC_AddCustomerTest_003')
-data.setCell(0, 3, 13150);
+data.setCell(0, 3, 13094);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'loginDDT')
-data.setCell(1, 2, 'com.hybframe.testCases.TC_LoginDDT_002')
-data.setCell(1, 3, 2494);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'loginDDT')
-data.setCell(2, 2, 'com.hybframe.testCases.TC_LoginDDT_002')
-data.setCell(2, 3, 1975);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'loginDDT')
-data.setCell(3, 2, 'com.hybframe.testCases.TC_LoginDDT_002')
-data.setCell(3, 3, 1867);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'loginDDT')
-data.setCell(4, 2, 'com.hybframe.testCases.TC_LoginDDT_002')
-data.setCell(4, 3, 1667);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'loginDDT')
-data.setCell(5, 2, 'com.hybframe.testCases.TC_LoginDDT_002')
-data.setCell(5, 3, 1663);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'loginTest')
-data.setCell(6, 2, 'com.hybframe.testCases.TC_LoginTest')
-data.setCell(6, 3, 1594);
+data.setCell(1, 1, 'loginTest')
+data.setCell(1, 2, 'com.hybframe.testCases.TC_LoginTest')
+data.setCell(1, 3, 1305);
 window.suiteTableData['HybridFrameWorkV1']= { tableData: data, tableDiv: 'times-div-HybridFrameWorkV1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-HybridFrameWorkV1">
               </div> <!-- times-div-HybridFrameWorkV1 -->
             </div> <!-- times-div -->
@@ -378,67 +255,26 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">loginTest</span>
-                <span class="method-start">5440 ms</span>
+                <span class="method-start">5516 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">7047 ms</span>
-              </div> <!-- configuration-class after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.hybframe.testCases.TC_LoginDDT_002</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setup(chrome)</span>
-                <span class="method-start">7754 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">loginDDT(mngr184520, dfghJikl)</span>
-                <span class="method-start">13257 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">loginDDT(mngr178963, fdgsfdFF)</span>
-                <span class="method-start">15233 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">loginDDT(mngr181790, uqAhAmu)</span>
-                <span class="method-start">17728 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">loginDDT(mngr125896, ghTyUiok)</span>
-                <span class="method-start">19393 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">loginDDT(mngr145698, vbhgTUkl)</span>
-                <span class="method-start">21261 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">22928 ms</span>
+                <span class="method-start">6831 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.hybframe.testCases.TC_AddCustomerTest_003</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(chrome)</span>
-                <span class="method-start">23547 ms</span>
+                <span class="method-start">7462 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">addNewCustomer</span>
-                <span class="method-start">28218 ms</span>
+                <span class="method-start">12213 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">41371 ms</span>
+                <span class="method-start">25308 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
