--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ceabc1">  <td>19/04/05 17:00:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest.loginTest()[pri:0, instance:com.hybframe.testCases.TC_LoginTest@239963d8]">loginTest</td> 
-  <td>main@329645619</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>19/05/08 14:35:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.hybframe.testCases.TC_AddCustomerTest_003@f6c48ac]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1836797772</td>   <td></td> </tr>
+<tr bgcolor="ceabc1">  <td>19/05/08 14:35:00</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustomerTest_003.addNewCustomer()[pri:0, instance:com.hybframe.testCases.TC_AddCustomerTest_003@f6c48ac]">addNewCustomer</td> 
+  <td>main@1836797772</td>   <td></td> </tr>
 </table>
