--- a/test-output/old/HybridFrameWorkV1/methods.html
+++ b/test-output/old/HybridFrameWorkV1/methods.html
@@ -1,30 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>HybridFrameWorkV1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3acfe">  <td>19/04/05 17:03:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.hybframe.testCases.TC_LoginTest@6500df86]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@477289012</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>19/04/05 17:04:02</td>   <td>5433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest.loginTest()[pri:0, instance:com.hybframe.testCases.TC_LoginTest@6500df86]">loginTest</td> 
-  <td>main@477289012</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>19/04/05 17:04:03</td>   <td>7040</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hybframe.testCases.TC_LoginTest@6500df86]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@477289012</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>19/04/05 17:04:04</td>   <td>7747</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.hybframe.testCases.TC_LoginDDT_002@402a079c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@477289012</td>   <td></td> </tr>
-<tr bgcolor="82f6ef">  <td>19/04/05 17:04:10</td>   <td>13250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.hybframe.testCases.TC_LoginDDT_002@402a079c]">loginDDT</td> 
-  <td>main@477289012</td>   <td></td> </tr>
-<tr bgcolor="82f6ef">  <td>19/04/05 17:04:12</td>   <td>15226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.hybframe.testCases.TC_LoginDDT_002@402a079c]">loginDDT</td> 
-  <td>main@477289012</td>   <td></td> </tr>
-<tr bgcolor="82f6ef">  <td>19/04/05 17:04:14</td>   <td>17721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.hybframe.testCases.TC_LoginDDT_002@402a079c]">loginDDT</td> 
-  <td>main@477289012</td>   <td></td> </tr>
-<tr bgcolor="82f6ef">  <td>19/04/05 17:04:16</td>   <td>19386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.hybframe.testCases.TC_LoginDDT_002@402a079c]">loginDDT</td> 
-  <td>main@477289012</td>   <td></td> </tr>
-<tr bgcolor="82f6ef">  <td>19/04/05 17:04:18</td>   <td>21254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDDT_002.loginDDT(java.lang.String, java.lang.String)[pri:0, instance:com.hybframe.testCases.TC_LoginDDT_002@402a079c]">loginDDT</td> 
-  <td>main@477289012</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>19/04/05 17:04:19</td>   <td>22921</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hybframe.testCases.TC_LoginDDT_002@402a079c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@477289012</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>19/04/05 17:04:20</td>   <td>23540</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.hybframe.testCases.TC_AddCustomerTest_003@59ec2012]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@477289012</td>   <td></td> </tr>
-<tr bgcolor="6fc185">  <td>19/04/05 17:04:25</td>   <td>28211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustomerTest_003.addNewCustomer()[pri:0, instance:com.hybframe.testCases.TC_AddCustomerTest_003@59ec2012]">addNewCustomer</td> 
-  <td>main@477289012</td>   <td></td> </tr>
-<tr bgcolor="b3acfe">  <td>19/04/05 17:04:38</td>   <td>41364</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hybframe.testCases.TC_AddCustomerTest_003@59ec2012]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@477289012</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>19/05/08 15:03:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.hybframe.testCases.TC_LoginTest@598067a5]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816089958</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/05/08 15:03:14</td>   <td>5510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest.loginTest()[pri:0, instance:com.hybframe.testCases.TC_LoginTest@598067a5]">loginTest</td> 
+  <td>main@1816089958</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>19/05/08 15:03:15</td>   <td>6825</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hybframe.testCases.TC_LoginTest@598067a5]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816089958</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>19/05/08 15:03:16</td>   <td>7456</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.hybframe.testCases.TC_AddCustomerTest_003@3c0ecd4b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816089958</td>   <td></td> </tr>
+<tr bgcolor="82f6ef">  <td>19/05/08 15:03:21</td>   <td>12207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddCustomerTest_003.addNewCustomer()[pri:0, instance:com.hybframe.testCases.TC_AddCustomerTest_003@3c0ecd4b]">addNewCustomer</td> 
+  <td>main@1816089958</td>   <td></td> </tr>
+<tr bgcolor="8a9f61">  <td>19/05/08 15:03:34</td>   <td>25302</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.hybframe.testCases.TC_AddCustomerTest_003@3c0ecd4b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1816089958</td>   <td></td> </tr>
 </table>
